--- a/platform_code/assessment/templates/assessment/pagination.html
+++ b/platform_code/assessment/templates/assessment/pagination.html
@@ -14,8 +14,7 @@
         {% endif %}
 
         <span class="current">
-<!--            todo translation needed-->
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            Page {{ page_obj.number }} {% trans "of" %} {{ page_obj.paginator.num_pages }}.
         </span>
 
         {% if page_obj.has_next %}
