--- a/platform_code/assessment/templates/assessment/upgrade-banner.html
+++ b/platform_code/assessment/templates/assessment/upgrade-banner.html
@@ -1,9 +1,15 @@
 {% load static %}
 {% load i18n %}
+{% load home_tags %}
 
 <header role="banner" class="upgrade-banner">{% trans "Your evaluation version is not up to date. Do you want to" %}
-    <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval"
-    >{% trans " upgrade" %}</a>{% trans "? Your answers will be preserved." %}
+    {% if evaluation.organisation|get_role:user == "admin" %}
+        <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval"
+        >{% trans " upgrade" %}</a>
+    {% else %}
+        <a href="#" title="{% trans ' You do not have the right to do this action' %}"
+        >{% trans " upgrade" %}</a>
+    {% trans "? Your answers will be preserved." %}
 </header>
 
 <div class="modal" id="modal-upgrade-eval" aria-hidden="true">
