--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -151,7 +151,6 @@ a:hover {
   -webkit-transform: rotate(-45deg);
   width: 100px;
   display: block;
-  background: #79A70A;
   background: linear-gradient(#FF7364 0%, #CF5D51 100%);
   box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
   position: absolute;
@@ -161,19 +160,19 @@ a:hover {
   content: "";
   position: absolute; left: 0px; top: 100%;
   z-index: -1;
-  border-left: 3px solid #79A70A;
+  border-left: 3px solid #CF5D51;
   border-right: 3px solid transparent;
   border-bottom: 3px solid transparent;
-  border-top: 3px solid #79A70A;
+  border-top: 3px solid #CF5D51;
 }
 .ribbon span::after {
   content: "";
   position: absolute; right: 0px; top: 100%;
   z-index: -1;
   border-left: 3px solid transparent;
-  border-right: 3px solid #79A70A;
+  border-right: 3px solid #CF5D51;
   border-bottom: 3px solid transparent;
-  border-top: 3px solid #79A70A;
+  border-top: 3px solid #CF5D51;
 }
 
 /****** END BETA BANNER *******/
