--- a/platform_code/assessment/templates/assessment/content-section.html
+++ b/platform_code/assessment/templates/assessment/content-section.html
@@ -101,7 +101,7 @@
                                         Q{{section.master_section.order_id}}.{{element.master_evaluation_element.order_id}} : {{element.master_evaluation_element.question_text|markdownify}}
                                     </div>
                                     {% if element.master_evaluation_element.explanation_text %}
-                                    <div class="help-tip help-tip-explanation absolute" style="font-size:18px;">
+                                    <div class="help-tip help-tip-explanation absolute-position" style="font-size:18px;">
                                         <p>{{element.master_evaluation_element.explanation_text|markdownify}}</p>
                                     </div>
 
