--- a/platform_code/assessment/templates/assessment/creation-evaluation-modal.html
+++ b/platform_code/assessment/templates/assessment/creation-evaluation-modal.html
@@ -4,7 +4,7 @@
     <form id="create_evaluation_form" method='post' class="form" role="form"
           action="{% url 'assessment:orga-summary' organisation.id %}">
         <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">{% trans "Create a new evaluation" %}</h4>
+            <h4 class="modal-title absolute-position" id="myModalLabel">{% trans "Create a new evaluation" %}</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body create-form">
