--- a/platform_code/home/templates/home/profile-orga-creation-modal.html
+++ b/platform_code/home/templates/home/profile-orga-creation-modal.html
@@ -3,7 +3,7 @@
 <div class="create-orga-modal">
     <form id="orga-creation-form" method='post' class="form" role="form">
         <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">{% trans "Create a new organisation" %}</h4>
+            <h4 class="modal-title absolute-position" id="myModalLabel">{% trans "Create a new organisation" %}</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body create-form">
