--- a/platform_code/home/templates/home/profile.html
+++ b/platform_code/home/templates/home/profile.html
@@ -5,6 +5,12 @@
 
 {% block content %}
 
+<div class="breadcrumbs">
+    <a href="#" class="active-breadcrumb">{% trans 'Dashboard' %}</a>
+    <span> ></span>
+    <a href="#" class="active-breadcrumb" id="active-profile"><span>{% trans "My evaluations" %}</span></a>
+</div>
+
 <h1>{% trans "Your dashboard" %} </h1>
 
 {% if messages %}
@@ -21,15 +27,20 @@
             <ul class="nav nav-pills nav-stacked flex-column table-column-profile" role="tablist">
                 <li class="nav-item column-button">
                     <a class="nav-link profile-column active" data-toggle="pill" name="column-button"
-                       href="#content-eval">{% trans "My evaluations" %}</a>
+                       href="#content-eval" id="tab-eval"
+                        onclick="display_text_in_link('{% trans 'My evaluations' %}', 'active-profile')"
+                        >{% trans "My evaluations" %}</a>
                 </li>
                 <li class="nav-item column-button">
                    <a class="nav-link profile-column" data-toggle="pill" name="column-button"
-                       href="#content-orga">{% trans "Organisation" %}</a>
+                       href="#content-orga" id="tab-orga"
+                        onclick="display_text_in_link('{% trans 'My organisations' %}', 'active-profile')">{% trans "Organisation" %}</a>
                 </li>
                 <li class="nav-item column-button">
                     <a class="nav-link profile-column" data-toggle="pill" name="column-button"
-                       href="#content-ressource">{% trans "My resources" %}</a>
+                       href="#content-ressource" id="tab-resource"
+                        onclick="display_text_in_link('{% trans 'My resources' %}', 'active-profile')"
+                        >{% trans "My resources" %}</a>
                 </li>
 
                 <li class="nav-item column-button">
