--- a/platform_code/assessment/templates/assessment/orga-settings.html
+++ b/platform_code/assessment/templates/assessment/orga-settings.html
@@ -8,3 +8,5 @@
 <p>{% trans "Activity:" %} {{organisation.sector}}</p>
 <p>{% trans "Size:"%} {{organisation.size}}</p>
 <p>{% trans "Number of members:" %} {{organisation.count_members}}</p>
+<p>{% trans "Number of in progress evaluations:" %} {{organisation.get_list_evaluations|count_in_progress}}</p>
+<p>{% trans "Number of finished evaluations:" %} {{organisation.get_list_evaluations|count_finished}}</p>
