--- a/platform_code/home/templates/home/profile-settings.html
+++ b/platform_code/home/templates/home/profile-settings.html
@@ -20,24 +20,24 @@
             <ul class="nav nav-pills nav-stacked flex-column table-column-profile" role="tablist">
                 <li class="nav-item column-button">
                     <a class="nav-link profile-column active" data-toggle="pill" name="column-button"
-                       onclick="display_text_in_link('{% trans 'My information' %}', 'active-profile-settings')"
+                       onclick="displayTextLink('{% trans 'My information' %}', 'active-profile-settings')"
                        href="#content-username">{% trans "User information" %}</a>
                 </li>
                 <li class="nav-item column-button">
                    <a class="nav-link profile-column" data-toggle="pill" name="column-button"
                        href="#content-password"
-                       onclick="display_text_in_link('{% trans 'Password' %}', 'active-profile-settings')"
+                       onclick="displayTextLink('{% trans 'Password' %}', 'active-profile-settings')"
                        >{% trans "Password" %}</a>
                 </li>
                 <li class="nav-item column-button">
                     <a class="nav-link profile-column" data-toggle="pill" name="column-button"
-                       onclick="display_text_in_link('{% trans 'Data export' %}', 'active-profile-settings')"
+                       onclick="displayTextLink('{% trans 'Data export' %}', 'active-profile-settings')"
                        href="#content-export">{% trans "Export personnal data" %}</a>
                 </li>
 
                 <li class="nav-item column-button">
                     <a class="nav-link profile-column" data-toggle="pill" name="column-button"
-                       onclick="display_text_in_link('{% trans 'Account deletion' %}', 'active-profile-settings')"
+                       onclick="displayTextLink('{% trans 'Account deletion' %}', 'active-profile-settings')"
                        href="#content-delete">{% trans "Delete the account" %}</a>
                 </li>
             </ul>
