--- a/platform_code/home/templates/home/profile.html
+++ b/platform_code/home/templates/home/profile.html
@@ -28,18 +28,18 @@
                 <li class="nav-item column-button">
                     <a class="nav-link profile-column active" data-toggle="pill" name="column-button"
                        href="#content-eval" id="tab-eval"
-                        onclick="display_text_in_link('{% trans 'My evaluations' %}', 'active-profile')"
+                        onclick="displayTextLink('{% trans 'My evaluations' %}', 'active-profile')"
                         >{% trans "My evaluations" %}</a>
                 </li>
                 <li class="nav-item column-button">
                    <a class="nav-link profile-column" data-toggle="pill" name="column-button"
                        href="#content-orga" id="tab-orga"
-                        onclick="display_text_in_link('{% trans 'My organisations' %}', 'active-profile')">{% trans "Organisation" %}</a>
+                        onclick="displayTextLink('{% trans 'My organisations' %}', 'active-profile')">{% trans "Organisation" %}</a>
                 </li>
                 <li class="nav-item column-button">
                     <a class="nav-link profile-column" data-toggle="pill" name="column-button"
                        href="#content-ressource" id="tab-resource"
-                        onclick="display_text_in_link('{% trans 'My resources' %}', 'active-profile')"
+                        onclick="displayTextLink('{% trans 'My resources' %}', 'active-profile')"
                         >{% trans "My resources" %}</a>
                 </li>
 
