--- a/platform_code/assessment/templates/assessment/content-section.html
+++ b/platform_code/assessment/templates/assessment/content-section.html
@@ -42,7 +42,7 @@
                                 <button class="btn btn-link btn-block text-left " type="button" data-toggle="collapse"
                                         data-target="#collapse{{element.id}}" aria-expanded="true"
                                         aria-controls="collapse{{element.id}}">
-                                    Q{{section.master_section.order_id}}.{{element.master_evaluation_element.order_id}} : {{element.master_evaluation_element.name}}
+                                    Q{{section.master_section.order_id}}.{{element.master_evaluation_element.order_id}} : {{element.master_evaluation_element.name|markdownify}}
                                 </button>
 
 
