Revert "Rename the folder of the assessments and update assessment version"
This reverts commit c9118a9f

--- a/platform_code/assessment/static/css/element-card.css
+++ b/platform_code/assessment/static/css/element-card.css
@@ -94,7 +94,7 @@ div.evaluation-title: h3 {
 
 .textarea-data {
     width: 100%;
-    color: #212529;
+    color: #4D566B;
     border-radius: 0.25em;
     border: 1px solid lightsteelblue;
 }
