--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -31,6 +31,10 @@ body{
     display: none;
 }
 
+.italic{
+    font-style: italic;
+}
+
 h1 {
     text-align: center;
     margin: 0 auto;
@@ -81,6 +85,14 @@ a:hover {
 
 .margin-150 {
     margin-top: 150px;
+}
+
+.margin-bot-50{
+    margin-bottom: 50px;
+}
+
+.margin-all-20{
+    margin: 20px;
 }
 
 .margin-bot-top-20 {
